2003-05-05 Jim Garlick <garlick@llnl.gov>
    * src/{device.[ch],device_tcp.c,device_serial.c}: renamed 
    dev->connect_status to dev->connect_state and fixed a couple of places 
    where it was being treated as a bitmask instead of an enum.

    * src/device.[ch]: replaced dev->script_status with dev->logged_in flag
    and ExecCtx 'processing' flag.

    * src/device*: replaced conditional calls to tcp/serial connect/disconnect
    functions with function pointers.  Moved device_telnet.c into device_tcp.c.

    * src/parse.y: cleaned up host/flags parsing.

    * src/powermand.c: ignore SIGPIPE.
    
2003-05-01 Jim Garlick <garlick@llnl.gov>

    * src/parse.y: destroyStmt was trying to destroy NULL setplugstate.interps
    list.

    * src/*: Eliminate device types.  Deduce whether TCP or serial from
    presence of leading '/' in hostname.  Change powerman.conf syntax to
    want hostname:port in the hostname field, reserving last position for
    flags (future use).  Enable telnet option processing always.

    * etc/powerman.conf.vicebox: Removed.

    * etc/powerman.conf.vpc : Removed.

2003-05-01 Jim Garlick <garlick@llnl.gov>
   
    * etc/phantom.dev: got working with the actual hardware (all but temp)

2003-04-23 Jim Garlick <garlick@llnl.gov>

    * src/*: rename "setstatus" to "setplugstate".

    * etc/ibmrsa.dev: fix reversed regex parameters to setplugname command.

2003-04-21 Jim Garlick <garlick@llnl.gov>

    * src/{parse.y,parse.lex,device.c}: Add "ifon" and "ifoff" conditionals.

    * src/wrappers.c: workaround for RH9 getaddrinfo core dumps.

    * Makefile,powerman.spec: install phantom.dev.

    * test/vpcd.c,etc/vpc.dev: add toggle command to test ifoff/ifon 
    functionality.

    * etc/phantom.dev: fix ifoff syntax and add cycle script.

2003-04-18 Jim Garlick <garlick@llnl.gov>

    * src/{parse.y,parse.lex,device.c}: Get rid of "onstring" and "offstring" 
    and add optional on="regex" off="regex" parameters to setstatus stmt.
